customer list page with datatable and print pdf done

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "infyomlabs/laravel-ui-adminlte": "^2.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.29",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "yajra/laravel-datatables-buttons": "^4.10",
+        "yajra/laravel-datatables-oracle": "^9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
